# stupidhack2024

./: pyproject.toml
code/: function.py  main.py
